header, footer, some mq

--- a/mycha_mob/beauty.html
+++ b/mycha_mob/beauty.html
@@ -40,92 +40,51 @@
 			</section>  
 		</header>
 		<main>
-			<h2>calming</h2>
-			
+			<h2>beauty</h2>
 			<section class="tea_listings">
-				  <!-- Calming -->
-					  <div class="C" id="calmeChaud">
+				<!-- Beauty -->
+					<div class="B" id="slim">
 						<div class="tea_details">
-							<img class="photo1" src="./images/calme_L.jpg" />
-							<h4 class="cha_detail">Au calme, au chaud</h4>
-							<h5>Calming, harmonizing… blissful</h5>
+							<img class="photo1" src="./images/slim_L.jpg" />
+							<h4 class="cha_detail">Slim</h4>
+							<h5>Let's slim!</h5>
 							<p class="composicao">
-							Cinnamon, Orange Blossom, Linden</p>
-							<p class="descricao">Close your eyes and imagine a roaring fire, a moment to yourself… the reassuring scent of warm cinnamon and sweet orange blossom make you feel as if wrapped up in a cocoon.</p>
+							Liquorice, Blackcurrant, Red vine, Mouse-ear hawkweed, Corn silk, Meadowsweet</p>
+							<p class="descricao">Fighting liquid retention brings back the feeling of a lightweight and sexy body.</p>
 						</div>
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
-					        <form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
+							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
 								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Au Calme au Chaud">
+								<input name="product" type="hidden" value="Slim">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
 								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
-					  </div>
-					  <div class="C" id="orangerie">
+					</div>
+					<div class="B" id="skin">
 						<div class="tea_details">
-							<img class="photo1" src="./images/orangerie_L.jpg" />
-							<h4 class="cha_detail">L’orangerie</h4>
-							<h5>Inside the orangery</h5>
+							<img class="photo1" src="./images/skin6_L.jpg" />
+							<h4 class="cha_detail">Skin</h4>
+							<h5>The traditionnal skin detox</h5>
 							<p class="composicao">
-							Basil, Lemon peel, Orange blossom, Verbena</p>
-							<p class="descricao">A sacred plant in the East, Basil promotes concentration and its essential oil helps fight anxiety. In a tea, we essentially enjoy its digestive qualities. Its sweet freshness blends with aromas of citrus in this very inspiring infusion.</p>
+							Greater Burdock, Rosemary, Calendula, Peppermint</p>
+							<p class="descricao">Cleansing and soothing, enjoy a real beau-tea.</p>
 						</div>
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
 								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="L'Orangerie">
+								<input name="product" type="hidden" value="Skin">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
 								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
-					  </div>
-					  <div class="C" id="blueMoon">
-						  <div class="tea_details">
-							<img class="photo1" src="./images/blue_moon_L.jpg" />
-							<h4 class="cha_detail">Blue Moon</h4>
-							<h5>Gently caressing you to sleep</h5>
-							<p class="composicao">
-							Lavender, Melissa, Peppermint, Verbena, Mallow, Valerian</p>
-							<p class="descricao">Inhale it and allow the lavender and verbena to relax you.  Sweet after dinner thanks to Melissa… or as a cool drink on a summer afternoon with ice and fresh mint leaves.</p>
-						</div>
-						<div class="buy">
-							<p class="price">35g&nbsp;&nbsp;6,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Blue Moon">
-								<input name="price" type="hidden" value="6.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
-							</div>
-					  </div>
-					  <div class="C" id="fullMoon">
-						  <div class="tea_details">
-							<img class="photo1" src="./images/fullmoon_L.jpg" />
-							<h4 class="cha_detail">Full Moon</h4>
-							<h5>It’s night, yet we don’t sleep…</h5>
-							<p class="composicao">
-							Lavender, Lemongrass, Peppermint, Mallow, Valerian</p>
-							<p class="descricao">Refreshing, it has all the virtues of mint and lavender ... with a lemongrass zest… or be enjoyed as a delicious summer drink.</p>
-						</div>
-						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;6,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Full Moon">
-								<input name="price" type="hidden" value="6.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
-						</div>
-					  </div>
-				</section>
-				<div id="family_links">
+					</div>
+			</section>
+			<div id="family_links">
 					<nav>
 						<a href="./tonic.html">tonic</a>
 						<a href="#">little extras</a>
