--- a/mycha_mob/detox.html
+++ b/mycha_mob/detox.html
@@ -40,101 +40,104 @@
 			</section>  
 		</header>
 		<main>
-			<h2>calming</h2>
+			<h2>little extras</h2>
 			
 			<section class="tea_listings">
-				  <!-- Calming -->
-					  <div class="C" id="calmeChaud">
+				  
+				<!-- Detox -->
+					<div class="D" id="tropMange">
 						<div class="tea_details">
-							<img class="photo1" src="./images/calme_L.jpg" />
-							<h4 class="cha_detail">Au calme, au chaud</h4>
-							<h5>Calming, harmonizing… blissful</h5>
+							<img class="photo1" src="./images/chocolat_L.jpg" />
+							<h4 class="cha_detail">Trop mangé de chocolat!</h4>
+							<h5>A gentle aid to digestive 
+							excesses</h5>
 							<p class="composicao">
-							Cinnamon, Orange Blossom, Linden</p>
-							<p class="descricao">Close your eyes and imagine a roaring fire, a moment to yourself… the reassuring scent of warm cinnamon and sweet orange blossom make you feel as if wrapped up in a cocoon.</p>
+							Liquorice, Angelica, Star Anise, Peppermint </p>
+							<p class="descricao">To counter (effect) the small excesses, or simply for the pleasure of the Anise flavour.</p>
 						</div>
 						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;6,50€</p>
-					        <form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
+							<p class="price">50g&nbsp;&nbsp;6,50€</p>
+							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
 								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Au Calme au Chaud">
+								<input name="product" type="hidden" value="Trop Mange">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
 								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
-					  </div>
-					  <div class="C" id="orangerie">
+					</div>
+					<div class="D" id="adieuMonRhume">
 						<div class="tea_details">
-							<img class="photo1" src="./images/orangerie_L.jpg" />
-							<h4 class="cha_detail">L’orangerie</h4>
-							<h5>Inside the orangery</h5>
+							  <img class="photo1" src="./images/rhume_L.jpg" />
+							  <h4 class="cha_detail">Adieu mon rhume</h4>
+							<h5>Quick! Afore the first chills set in!</h5>
 							<p class="composicao">
-							Basil, Lemon peel, Orange blossom, Verbena</p>
-							<p class="descricao">A sacred plant in the East, Basil promotes concentration and its essential oil helps fight anxiety. In a tea, we essentially enjoy its digestive qualities. Its sweet freshness blends with aromas of citrus in this very inspiring infusion.</p>
+							Lavender, Equinacea, Eucalyptus, Ginger, Rose, Lemon Thyme</p>
+							<p class="descricao">The perfect tea to have at home when the first chills set in!  Rich in eucalyptus oils, it can also be used for inhalation if the chills have already set in (prepare a decoction then).</p>
+						</div>
+						<div class="buy">
+							<p class="price">55g&nbsp;&nbsp;6,50€</p>
+							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
+								<input name="userid" type="hidden" value="B7179736">
+								<input name="product" type="hidden" value="Adieu Mon Rhume">
+								<input name="price" type="hidden" value="6.50">
+								<input name="return" type="hidden" value="www.mycha.org/buy.html">
+								<input class="add-to-cart" type="submit" value="add to cart">
+							</form>
+						</div>
+					</div>
+					<div class="D" id="pure">
+						<div class="tea_details">
+							<img class="photo1" src="./images/pure_L.jpg" />
+							<h4 class="cha_detail">Pure</h4>
+							<h5>When you need a detox</h5>
+							<p class="composicao">
+							Artichoke, Boldo, Meadowsweet, Sage, Calendula, Orthosiphon, Nettle</p>
+							<p class="descricao">When you need a detox... Slightly bitter but effective.</p>
 						</div>
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
 								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="L'Orangerie">
+								<input name="product" type="hidden" value="Pure">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
 								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
-					  </div>
-					  <div class="C" id="blueMoon">
-						  <div class="tea_details">
-							<img class="photo1" src="./images/blue_moon_L.jpg" />
-							<h4 class="cha_detail">Blue Moon</h4>
-							<h5>Gently caressing you to sleep</h5>
+					</div>
+					<div class="D" id="circulez">
+						<div class="tea_details">
+							<img class="photo1" src="./images/circulez_L.jpg" />
+							<h4 class="cha_detail">Circulez!</h4>
+							<h5>Protects circulation, with taste</h5>
 							<p class="composicao">
-							Lavender, Melissa, Peppermint, Verbena, Mallow, Valerian</p>
-							<p class="descricao">Inhale it and allow the lavender and verbena to relax you.  Sweet after dinner thanks to Melissa… or as a cool drink on a summer afternoon with ice and fresh mint leaves.</p>
-						</div>
-						<div class="buy">
-							<p class="price">35g&nbsp;&nbsp;6,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Blue Moon">
-								<input name="price" type="hidden" value="6.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
+							Red vine, Herb-Robert Geranium, Blueberry, Hibiscus, Rose </p>
+							<p class="descricao">A herbal mix of protective plants with a floral and tangy taste to aid circulation.</p>
 							</div>
-					  </div>
-					  <div class="C" id="fullMoon">
-						  <div class="tea_details">
-							<img class="photo1" src="./images/fullmoon_L.jpg" />
-							<h4 class="cha_detail">Full Moon</h4>
-							<h5>It’s night, yet we don’t sleep…</h5>
-							<p class="composicao">
-							Lavender, Lemongrass, Peppermint, Mallow, Valerian</p>
-							<p class="descricao">Refreshing, it has all the virtues of mint and lavender ... with a lemongrass zest… or be enjoyed as a delicious summer drink.</p>
-						</div>
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
 								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Full Moon">
+								<input name="product" type="hidden" value="Circulez">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
 								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
-					  </div>
-				</section>
-				<div id="family_links">
-					<nav>
-						<a href="./tonic.html">tonic</a>
-						<a href="#">little extras</a>
-						<a href="#">iced tea</a>
-						<a href="#">beauty</a>
-						<a href="#">taylor made</a>
-						<a href="#">see all</a>
-					</nav>
-				</div>
+					</div>
+					<div id="family_links">
+						<nav>
+							<a href="./tonic.html">tonic</a>
+							<a href="./calming.html">calming</a>
+							<!-- <a href="#">little extras</a> -->
+							<a href="./beauty.html">beauty</a>
+							<a href="#">iced tea</a>
+							<a href="#">taylor made</a>
+							<a href="#">see all</a>
+						</nav>
+					</div>
+			</section>
 		</main>
 		<footer>
 			<p id="legal">&#169;2017 My Cha</p>
