--- a/mycha_mob/terms.html
+++ b/mycha_mob/terms.html
@@ -19,29 +19,24 @@
 			       <div>
 			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
 				       </div>
-				  </form>
-				  <ul id="idioma">
-				    <li><a href="en/index_en.html">en</a></li>
-				    <li><a href="fr/index_fr.html">fr</a></li>
-			    </ul>
+				 </form>
+				 <a id="fb" href="https://www.facebook.com/mychaface">
+					<img src="images/facebook-outline1.png" alt="facebook">
+				</a>
 			</section>
 			<section>
 				<a id="logo" href="index.html">
 					<img src="images/logo1.jpg">
 				</a>
 				<nav>
-					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
 					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
-					<!-- <a href="#sinto-me">hoje sinto-me</a> -->
-					<!-- <a href="#receitas">receitas</a> -->
 					<a href="./buy.html">buy</a>
-					<!-- <a href="#press">press</a> -->
 					<a href="./contact.html">contact</a>
 				</nav>
-				<a id="fb" href="https://www.facebook.com/mychaface">
-					<img src="images/facebook-outline1.png" alt="facebook">
-				</a> 
+				<a id="basket" href="http://ww9.aitsafe.com/cf/review.cfm?userid=B7179736&return=www.mycha.org/buy.htm">
+				  	<img src="./images2/basket.gif" />
+				</a>
 			</section>  
 		</header>
 		<main>
@@ -52,8 +47,9 @@
 				<p>‘Conditions’ means the terms and conditions of supply of the services as set out in this document. <br />‘Customer’ means individual, firm, corporate body, unincorporated association or other body. <br />‘Customer Address’ means address of the Customer or the address specified by the customer to which the goods to be delivered by Company. <br />‘Goods’ means any products sold through www.mycha.org website and subject to availability. <br />‘Price’ means the price of products and services payable by Customer.</p>
 				 <p>The Company accepts orders via this website with information provided by the customer without errors or omissions. <br />The company will endeavour to process all orders within 3 working days for all Goods, subject to availability. Where the Goods are temporarily unavailable, we may offer a replacement goods for you. The company shall not be liable for any failure to provide the web site and/or the failures or delays in delivery where this is due to circumstances beyond Company’s reasonable control.</p>
 				<h4>Payments</h4>
-				<p>My Cha Online Shop uses <strong>WorldPay technology</strong>. All the information you give on the site will be protected. We do not store any credit card payment or payment information on our site, nor do we sell or rent personal information to third parties. My Cha Online Shop has chosen <b>WorldPay</b> for maximum security during the payment process on the site.</p>
-				<p>The company will take payment in Euros at the time of order, not the time of dispatch and the payment can be made by the following credit or debit cards - VISA, VISA DEBIT, VISA ELECTRON, MASTER, AMEX, JCB, MAESTRO and Paypal.</p>
+				<p>My Cha Online Shop uses Pay Pal payments. All the information you give on the site will be protected. We do not store any credit card payment or payment information on our site, nor do we sell or rent personal information to third parties.</p>
+				<p>It is not required to have a Pay Pal account to make a payment via Pay Pal.</p>
+				<p>The company will take payment in Euros at the time of order, not the time of dispatch.</p>
 				<h4>Returns Policy</h4>
 				<p>We source and produce our own tea and herbal tisane blends, from finding the best ingredients, to blending, designing, packaging, and selling them.  We love the products we make and firmly believe in quality. We hope you will be happy with our products too, but if not then we can exchange your item for something else in our product range. Please return it in the original packaging to My Cha Customer Service, Rua Cecílio de Sousa, 77a, 1200-100, Lisbon, Portugal. You also have a right to cancel your order, by giving us notice by email contact@mycha.org within 7 working days from the date of you receiving your order. You will be refunded an agreed amount within 30 days of cancellation. Please make sure to tell us why you are dissatisfied.  <br />Unfortunately we are not responsible for the return postage unless in exceptional circumstances. When you post the goods please retain proof of postage from the post office or courier. Without this we cannot be responsible for any items that fail to reach us.</p>
 				<h4>Privacy Policy &amp; Security</h4>
