--- a/mycha_mob/buy.html
+++ b/mycha_mob/buy.html
@@ -19,11 +19,10 @@
 			       <div>
 			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
 				       </div>
-				  </form>
-				  <ul id="idioma">
-				    <li><a href="en/index_en.html">en</a></li>
-				    <li><a href="fr/index_fr.html">fr</a></li>
-			    </ul>
+				 </form>
+				 <a id="fb" href="https://www.facebook.com/mychaface">
+					<img src="images/facebook-outline1.png" alt="facebook">
+				</a>
 			</section>
 			<section>
 				<a id="logo" href="index.html">
@@ -35,9 +34,9 @@
 					<a href="./buy.html">buy</a>
 					<a href="./contact.html">contact</a>
 				</nav>
-				<a id="fb" href="https://www.facebook.com/mychaface">
-					<img src="images/facebook-outline1.png" alt="facebook">
-				</a> 
+				<a id="basket" href="http://ww9.aitsafe.com/cf/review.cfm?userid=B7179736&return=www.mycha.org/buy.htm">
+				  	<img src="./images2/basket.gif" />
+				</a>
 			</section>  
 		</header>
 		<main>
@@ -353,7 +352,10 @@
 		</main>
 		<footer>
 			<p id="legal">&#169;2017 My Cha</p>
-			<a href="./terms.html">Terms &amp; Conditions</a>
+			<div>
+				<span id="pp"><img src="./images2/ppcom-grey.png" alt="PayPal Logo"></span>
+				<a href="./terms.html">Terms &amp; Conditions</a>
+			</div>
 		</footer>
 	  </div>
   </body>
