--- a/mycha_mob/beauty.html
+++ b/mycha_mob/beauty.html
@@ -87,9 +87,10 @@
 			<div id="family_links">
 					<nav>
 						<a href="./tonic.html">tonic</a>
+						<a href="./calming.html">calming</a>
 						<a href="#">little extras</a>
+						<!-- <a href="#">beauty</a> -->
 						<a href="#">iced tea</a>
-						<a href="#">beauty</a>
 						<a href="#">taylor made</a>
 						<a href="#">see all</a>
 					</nav>
