--- a/mycha_mob/index.html
+++ b/mycha_mob/index.html
@@ -22,8 +22,8 @@
 			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
 				       </div>
 				 </form>
-				 <a id="fb" href="https://www.facebook.com/mychaface">
-					<img src="images/facebook-outline1.png" alt="facebook">
+				 <a class="fb" href="https://www.facebook.com/mychaface">
+					<!-- <img src="images/facebook-outline1.png" alt="facebook"> -->
 				</a>
 			</section>
 			<section>
@@ -55,8 +55,8 @@
 			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
 				       </div>
 				 </form>
-				 <a id="fb" href="https://www.facebook.com/mychaface">
-					<img src="images/facebook-outline1.png" alt="facebook">
+				 <a class="fb" href="https://www.facebook.com/mychaface">
+					<!-- <img src="images/facebook-outline1.png" alt="facebook"> -->
 				</a>
 			</section>
 			<section>
