--- a/mycha_mob/tonic.html
+++ b/mycha_mob/tonic.html
@@ -150,7 +150,7 @@
 						<a href="./calming.html">calming</a>
 						<a href="#">little extras</a>
 						<a href="#">iced tea</a>
-						<a href="#">beauty</a>
+						<a href="./beauty.html">beauty</a>
 						<a href="#">taylor made</a>
 						<a href="#">see all</a>
 					</nav>
