media queries complete

--- a/mycha_mob/thankyou.html
+++ b/mycha_mob/thankyou.html
@@ -21,7 +21,7 @@
 			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
 				       </div>
 				 </form>
-				 <a id="fb" href="https://www.facebook.com/mychaface">
+				 <a class="fb" href="https://www.facebook.com/mychaface">
 					<img src="images/facebook-outline1.png" alt="facebook">
 				</a>
 			</section>
@@ -30,6 +30,7 @@
 					<img src="images/logo1.jpg">
 				</a>
 				<nav>
+					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
 					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
 					<a href="./buy.html">buy</a>
@@ -42,7 +43,7 @@
 		</header>
 		<main>
 			<h2>Contact Us</h2>
-			<div class="align_center">
+			<!-- <div class="align_center"> -->
 				<div id="contact_form">
 				<p>Thank you. Your message has been sent!</p>
 					<form action="feedback.php" method="post" id="tswfbform" accept-charset="UTF-8">
@@ -62,14 +63,29 @@
 				<div id="contacts">
 				    <span >My Cha&nbsp;&ndash;&nbsp; Lisbon, Portugal</span>&bullet;<span>+351 919 198 988 </span>&bullet;<span>contact@mycha.org</span>
 			    </div>
-			</div>
+			<!-- </div> -->
 		</main>
 		<footer>
+			<section>
+				<form action="https://madmimi.com/signups/subscribe/44881" id="mad_mimi_signup_form" method="post" target="_blank">
+			       <div class="required"><!--<label for="signup_email">Email</label><br/>-->
+			          <input  class="required" data-invalid-email="This field is invalid" data-required-field="This field is required" id="signup_email" name="signup[email]" placeholder=" insert your email" type="text"/>
+			       </div>
+			       <div>
+			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
+				       </div>
+				 </form>
+				 <a class="fb" href="https://www.facebook.com/mychaface">
+					<img src="images/facebook-outline_grey.png" alt="facebook">
+				</a>
+			</section>
+			<section>
 			<p id="legal">&#169;2017 My Cha</p>
-			<div>
+			<div id="pay_terms">
 				<span id="pp"><img src="./images2/ppcom-grey.png" alt="PayPal Logo"></span>
 				<a href="./terms.html">Terms &amp; Conditions</a>
 			</div>
+		</section>
 		</footer>
 	</div>
 </body>
