--- a/mycha_mob/about.html
+++ b/mycha_mob/about.html
@@ -20,31 +20,31 @@
 			       <div>
 			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
 				       </div>
-				  </form>
-				  <ul id="idioma">
-				    <li><a href="en/index_en.html">en</a></li>
-				    <li><a href="fr/index_fr.html">fr</a></li>
-			    </ul>
+				 </form>
+				 <a class="fb" href="https://www.facebook.com/mychaface">
+					<img src="images/facebook-outline1.png" alt="facebook">
+				</a>
 			</section>
 			<section>
 				<a id="logo" href="index.html">
 					<img src="images/logo1.jpg">
 				</a>
 				<nav>
+					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
 					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
 					<a href="./buy.html">buy</a>
 					<a href="./contact.html">contact</a>
 				</nav>
-				<a id="fb" href="https://www.facebook.com/mychaface">
-					<img src="images/facebook-outline1.png" alt="facebook">
-				</a> 
+				<a id="basket" href="http://ww9.aitsafe.com/cf/review.cfm?userid=B7179736&return=www.mycha.org/buy.htm">
+				  	<img src="./images2/basket.gif" />
+				</a>
 			</section>  
 		</header>
 		<main>
 			<h2>The world of plants according to My&nbsp;Cha</h2>
 			<section id="conceito" class="white_bg"> 
-			    <img class="photo" src="images/matfin1_L.jpg">
+			    <div class="photo" id="matfin1"></div>
 			    <div class="body-copy">
 				    <h3> the magical new world of herbs</h3> 
 				    <p class="descricao cha_detail"> 
@@ -53,7 +53,7 @@
 						<span class="myCha">My Cha</span> also loves to prepare personalised herbal teas for a gourmet restaurant, luxury hotel, spa, or for special events.<br />The plants for the creation of the teas are aromatic and medicinal plants from controlled origins and are chosen for their virtues and qualities, 
 						<span>My Cha</span> herbal teas are free of caffeine and theine. 
 					</p>
-					<br />
+					<!-- <br /> -->
 					<h3>100% natural!</h3>
 				    <p class="descricao cha_detail"><span class="bold_name">No artificial flavouring...</span>
 				      The plants for the creation of the teas are aromatic and medicinal plants from controlled origins and are chosen for their virtues and qualities <br />
@@ -65,30 +65,30 @@
 		        </div>
 			</section>
 			<section id="perfil" class="green_bg">
-				<img class="photo" src="images/laetitia_L.jpg" /> 
+				<div class="photo" id="laetitia"></div>
 				<div class="body-copy">
 					<h3>My Cha's creator</h3>
-					<br />
+					<!-- <br /> -->
 					<p class="descricao cha_detail">
-						  <span class="bold_name">Laetitia Arrighi de Casanova</span> is the soul of <span class="myCha">My Cha</span>.</p><br />
+						  <span class="bold_name">Laetitia Arrighi de Casanova</span> is the soul of <span class="myCha">My&nbsp;Cha</span>.</p><br />
 						  <p class="descricao cha_detail">She lives and works in Lisbon and maintains strong ties to Paris.</p>
-						  <p class="descricao cha_detail">Fascinated by plants in all their forms, she combines consulting with creating <span class="myCha">My&nbsp; Cha</span> herbal teas. She doesn't miss an opportunity to travel around the world to inspiring and exotic locations and brings newly found influences to <span class="myCha">My Cha</span>'s unique herb blends.
+						  <p class="descricao cha_detail">Fascinated by plants in all their forms, she combines consulting with creating <span class="myCha">My&nbsp;Cha</span> herbal teas. She doesn't miss an opportunity to travel around the world to inspiring and exotic locations and brings newly found influences to <span class="myCha">My&nbsp;Cha</span>'s unique herb blends.
 					</p>
 				</div>
 			</section>
 			<h2>press</h2>
 			<section id="press">
 				<div class="logos">
-					<span id="FT" class="border">
+					<span id="FT">
 						<img  src="./images/howToSpendIt.png" alt="FT how to spend it logo" />
 					</span>
-					<span id="cotesud" class="border">
+					<span id="cotesud">
 						<img  src="./images/LogoCoteSud.png" alt="Cote Sud logo" />
 					</span>
-					<span id="vogue" class="border">
+					<span id="vogue">
 						<img  src="./images/vogue.png" alt="Vogue logo" />
 					</span>
-					<span id="mutante" class="no_border">
+					<span id="mutante">
 						<img  src="./images/mutante_logo.png" alt="Mutante logo" />
 					</span>
 					
@@ -96,8 +96,26 @@
 			</section>
 		</main>
 		<footer>
+			<section>
+				<form action="https://madmimi.com/signups/subscribe/44881" id="mad_mimi_signup_form" method="post" target="_blank">
+			       <div class="required"><!--<label for="signup_email">Email</label><br/>-->
+			          <input  class="required" data-invalid-email="This field is invalid" data-required-field="This field is required" id="signup_email" name="signup[email]" placeholder=" insert your email" type="text"/>
+			       </div>
+			       <div>
+			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
+				       </div>
+				 </form>
+				 <a class="fb" href="https://www.facebook.com/mychaface">
+					<img src="images/facebook-outline_grey.png" alt="facebook">
+				</a>
+			</section>
+			<section>
 			<p id="legal">&#169;2017 My Cha</p>
-			<a href="./terms.html">Terms &amp; Conditions</a>
+			<div id="pay_terms">
+				<span id="pp"><img src="./images2/ppcom-grey.png" alt="PayPal Logo"></span>
+				<a href="./terms.html">Terms &amp; Conditions</a>
+			</div>
+		</section>
 		</footer>
 	</div>
 </body>
