--- a/mycha_mob/contact.html
+++ b/mycha_mob/contact.html
@@ -22,7 +22,7 @@
 			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
 				       </div>
 				 </form>
-				 <a id="fb" href="https://www.facebook.com/mychaface">
+				 <a class="fb" href="https://www.facebook.com/mychaface">
 					<img src="images/facebook-outline1.png" alt="facebook">
 				</a>
 			</section>
@@ -31,6 +31,7 @@
 					<img src="images/logo1.jpg">
 				</a>
 				<nav>
+					<a id="mobile">menu&nbsp;&nbsp;&#9776;</a>
 					<a href="./infusions.html">infusions</a>
 					<a href="./about.html">about</a>
 					<a href="./buy.html">buy</a>
@@ -43,34 +44,50 @@
 		</header>
 		<main>
 			<h2>Contact Us</h2>
-			<div class="align_center">
+			<!-- <div class="align_center contact_area"> -->
 				<div id="contact_form">
 				<p>My Cha wants to hear from you!<br />Questions? Contact us:</p>
 					<form action="feedback.php" method="post" id="tswfbform" accept-charset="UTF-8">
 						<label for="tswname">Name</label> 
 						<input type="text" name="fullname"  id="tswname" size="39" />
-						<hr><br />
+						<hr><!-- <br /> -->
 						<label for="tswemail">Email</label> 
 						<input type="text"  id="tswemail" name="email" size="39" />
-						<hr><br />
+						<hr><!-- <br /> -->
 						<label for="tswcomments">Comments</label>
 						<br />
 						<textarea rows="15" cols="45" name="comments" id="tswcomments"></textarea>
-						<br />
+						<!-- <br /> -->
 						<input id="tswsubmit" type="submit" value="Send Feedback" />
 					</form>
 				</div>
-				<div id="contacts">
-				    <span >My Cha&nbsp;&ndash;&nbsp; Lisbon, Portugal</span>&bullet;<span>+351 916 556 278 </span>&bullet;<span>contact@mycha.org</span>
+				
+			<!-- </div> -->
+			<div id="contacts">
+				    <span >My Cha&nbsp;&ndash;&nbsp; Lisbon, Portugal</span>&nbsp;<span class="bullet">&bullet;</span>&nbsp;<span>+351 916 556 278 </span>&nbsp;<span class="bullet">&bullet;</span>&nbsp;<span>contact@mycha.org</span>
 			    </div>
-			</div>
 		</main>
 		<footer>
+			<section>
+				<form action="https://madmimi.com/signups/subscribe/44881" id="mad_mimi_signup_form" method="post" target="_blank">
+			       <div class="required"><!--<label for="signup_email">Email</label><br/>-->
+			          <input  class="required" data-invalid-email="This field is invalid" data-required-field="This field is required" id="signup_email" name="signup[email]" placeholder=" insert your email" type="text"/>
+			       </div>
+			       <div>
+			          <input class="submit" data-choose-list="&#8593; Choose a list" data-default-text="Subscribe" data-invalid-text="&#8593; You forgot some required fields" data-submitting-text="Sending..." id="webform_submit_button" name="commit" type="submit" value="Subscribe"/>
+				       </div>
+				 </form>
+				 <a class="fb" href="https://www.facebook.com/mychaface">
+					<img src="images/facebook-outline_grey.png" alt="facebook">
+				</a>
+			</section>
+			<section>
 			<p id="legal">&#169;2017 My Cha</p>
-			<div>
+			<div id="pay_terms">
 				<span id="pp"><img src="./images2/ppcom-grey.png" alt="PayPal Logo"></span>
 				<a href="./terms.html">Terms &amp; Conditions</a>
 			</div>
+		</section>
 		</footer>
 	</div>
 </body>
