revisions to footer, infusions and taylor made

--- a/mycha_mob/calming.html
+++ b/mycha_mob/calming.html
@@ -131,8 +131,8 @@
 						<!-- <a href="./calming.html">calming</a> -->
 						<a href="./detox.html">little extras</a>
 						<a href="./beauty.html">beauty</a>
-						<a href="#">iced tea</a>
-						<a href="#">taylor made</a>
+						<a href="./iced_tea.html">iced tea</a>
+						<a href="#">tailor-made</a>
 						<a href="./buy.html">see all</a>
 					</nav>
 		</main>
