--- a/mycha_mob/infusions.html
+++ b/mycha_mob/infusions.html
@@ -62,9 +62,9 @@
 						<img class="photo1" src="./images2/iced_tea_cvr.jpg" alt="">
 						<span class="label">iced tea</span>
 					</a>
-					<a href="./taylor_made.html">
+					<a href="./tailor-made.html">
 						<img class="photo1" src="./images2/taylor_made_cvr.jpg" alt="">
-						<span class="label">taylor made</span>
+						<span class="label">tailor-made</span>
 					</a>
 		      </section>
 		</main>
