--- a/mycha_mob/tailor-made.html
+++ b/mycha_mob/tailor-made.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
 	<meta name="description" content="Infusões de plantas, herbal infusions, herbal tea">
 </head>
-<body class="store">
+<body class="tailor">
 	<div id="wrapper">
 		<header>
 			<section>
@@ -41,59 +41,34 @@
 			</section>  
 		</header>
 		<main>
-			<h2>beauty</h2>
-			<section class="tea_listings">
-				<!-- Beauty -->
-					<div class="B" id="slim">
-						<div class="tea_details">
-							<img class="photo1" src="./images/slim_L.jpg" />
-							<h4 class="cha_detail">Slim</h4>
-							<h5>Let's slim!</h5>
-							<p class="composicao">
-							Liquorice, Blackcurrant, Red vine, Mouse-ear hawkweed, Corn silk, Meadowsweet</p>
-							<p class="descricao">Fighting liquid retention brings back the feeling of a lightweight and sexy body.</p>
-						</div>
-						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;6,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Slim">
-								<input name="price" type="hidden" value="6.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
-						</div>
-					</div>
-					<div class="B" id="skin">
-						<div class="tea_details">
-							<img class="photo1" src="./images/skin6_L.jpg" />
-							<h4 class="cha_detail">Skin</h4>
-							<h5>The traditionnal skin detox</h5>
-							<p class="composicao">
-							Greater Burdock, Rosemary, Calendula, Peppermint</p>
-							<p class="descricao">Cleansing and soothing, enjoy a real beau-tea.</p>
-						</div>
-						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;6,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Skin">
-								<input name="price" type="hidden" value="6.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
-						</div>
-					</div>
+			<h2>tailor-made</h2>
+			<section id="tailor-made" class="white_bg">
+				<div id="hands_book" class="photo">
+				</div>
+				<div class="body-copy">
+					<p class="descricao">In order to meet your specific needs, a special date, event or a corporate gift, <span class="myCha"> My Cha</span> will create an entirely personalized tailor made infusion, right down to the design details.<br />
+					We create a mixture of plants, flavors, and graphic design to define for this particular infusion, your very own herbal mix. 
+					</p>
+					<br />
+					<h3>A few examples for inspiration</h3>
+					<ul class="descricao cha_detail">
+						<li>A luxury hotel in Courchevel was looking for a special treat that clients could enjoy after a day of skiing: the bath infusion was born</li>
+						<li>This Princess asked for a tea that would capture the scent of her citrus garden, to serve to her guests</li>
+						<li>A Parisian Palace wants a pot-pourri as a natural olfactory signature in the rooms</li>
+						<li>This couple getting married in a lavender field designed a special gift for their guest</li>
+						<li>… How about your dream? We would be delighted to create it, just&nbsp;<a href="maito:contact@mycha.org">e-mail us</a>!</li>
+					</ul>
+				</div>
 			</section>
-					<nav id="family_links">
-						<a href="./tonic.html">tonic</a>
-						<a href="./calming.html">calming</a>
-						<a href="./detox.html">little extras</a>
-						<!-- <a href="#">beauty</a> -->
-						<a href="./iced_tea.html">iced tea</a>
-						<a href="#">tailor-made</a>
-						<a href="./buy.html">see all</a>
-					</nav>
+			<nav id="family_links">
+				<a href="./tonic.html">tonic</a>
+				<a href="./calming.html">calming</a>
+				<a href="./detox.html">little extras</a>
+				<a href="./beauty.html">beauty</a>
+				<a href="./iced_tea.html">iced tea</a>
+				<!-- <a href="#">tailor-made</a> -->
+				<a href="./buy.html">see all</a>
+			</nav>
 		</main>
 		<footer>
 			<section>
