--- a/mycha_mob/detox.html
+++ b/mycha_mob/detox.html
@@ -132,8 +132,8 @@
 							<a href="./calming.html">calming</a>
 							<!-- <a href="#">little extras</a> -->
 							<a href="./beauty.html">beauty</a>
-							<a href="#">iced tea</a>
-							<a href="#">taylor made</a>
+							<a href="./iced_tea.html">iced tea</a>
+							<a href="#">tailor-made</a>
 							<a href="./buy.html">see all</a>
 						</nav>
 			</section>
