--- a/mycha_mob/iced_tea.html
+++ b/mycha_mob/iced_tea.html
@@ -41,104 +41,62 @@
 			</section>  
 		</header>
 		<main>
-			<h2>shop my cha!</h2>
-			
+			<h2>iced tea</h2>
 			<section class="tea_listings">
-					<!-- Tonic -->
-					  <div class="T" id="madame">
-						<div class="tea_details">
-							<img class="photo1" src="./images/madame_L.jpg" />
-							<h4 class="cha_detail">Madame a besoin d’énergie</h4>
-							<h5>Long lasting feminine energy</h5>
+					 <div class="C" id="blueMoon">
+						 <div class="tea_details">
+							<img class="photo1" src="./images/blue_moon_L.jpg" />
+							<h4 class="cha_detail">Blue Moon</h4>
+							<h5>Gently caressing you to sleep</h5>
 							<p class="composicao">
-							Blueberry, Raspberry leaf, Ginseng, Hibiscus, Verbena, Rose, Everlasting flower, Nettle</p>
-							<p class="descricao">A tea including nettle, blueberry and hibiscus that combine mineral, tonic and antioxidant properties that will energise and uplift you.</p>
+							Lavender, Melissa, Peppermint, Verbena, Mallow, Valerian</p>
+							<p class="descricao">Inhale it and allow the lavender and verbena to relax you.  Sweet after dinner thanks to Melissa… or as a cool drink on a summer afternoon with ice and fresh mint leaves.</p>
 						</div>
 						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;8,50€</p>
+							<p class="price">35g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
 								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Madame">
-								<input name="price" type="hidden" value="8.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
-						</div>
-					</div>
-					<div class="T" id="monsieur">
-						<div class="tea_details">
-							<img class="photo1" src="./images/monsieur_L.jpg" />
-							<h4 class="cha_detail">Monsieur a besoin d’énergie</h4>
-							<h5>Stimulates, strengthens, awakens!</h5>
-							<p class="composicao">
-							Rosemary, Ginseng, Nettle, Lemon Thyme</p>
-							<p class="descricao">A very masculine drink with aromas of earth and wood, which strengthens the yang energy thanks to Ginseng. </p>
-						</div>
-						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;8,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Monsieur">
-								<input name="price" type="hidden" value="8.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
-						</div>
-					</div>
-					<div class="T" id="si_amore">
-						<div class="tea_details">
-							<img class="photo1" src="./images/si_amore_L.jpg" />
-							<h4 class="cha_detail">Si Amore!</h4>
-							<h5>Love in a tea</h5>
-							<p class="composicao">
-							Cocoa bean hulls, Rose petals, Vanilla pods from Madagascar</p>
-							<p class="descricao">Sensual and enticing, this potent brew tasting of vanilla and cocoa is simply irresistible. Slightly tonic, it draws its flavors from a luxurious combination of plants. It is so fragrant that it even fills  small chocolate cravings… without the calories!</p>
-						</div>
-						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;8,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Si Amore">
-								<input name="price" type="hidden" value="8.50">
-								<input name="return" type="hidden" value="www.mycha.org/buy.html">
-								<input class="add-to-cart" type="submit" value="add to cart">
-							</form>
-						</div>
-					</div>
-					<div class="T" id="samarcanda">
-						<div class="tea_details">
-							<img class="photo1" src="./images/samarcanda_L.jpg" />
-							<h4 class="cha_detail">Samarcanda</h4>
-							<h5>A treasure from the Silk Road</h5>
-							<p class="composicao">
-							Roses, Cinnamon, Cardamom, Black pepper, Cloves</p>
-							<p class="descricao">Rich, spicy, oriental, this infusion warms you up during winter days and helps fight small cold discomforts. A trip to the East through the Silk Road…</p>
-						</div>
-						<div class="buy">
-							<p class="price">40g&nbsp;&nbsp;6,50€</p>
-							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
-								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Samarcanda">
+								<input name="product" type="hidden" value="Blue Moon">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
 								<input class="add-to-cart" type="submit" value="add to cart">
 							</form>
 						</div>
 					</div>
-					<div class="T" id="leFeu">
+					<div class="C" id="fullMoon">
 						<div class="tea_details">
-							<img class="photo1" src="./images/leFeu_L.jpg" />
-							<h4 class="cha_detail">Le Feu</h4>
-							<h5>Light the fire under the duvet with vitalizing and libertine infusion</h5>
+							<img class="photo1" src="./images/fullmoon_L.jpg" />
+							<h4 class="cha_detail">Full Moon</h4>
+							<h5>It’s night, yet we don’t sleep…</h5>
 							<p class="composicao">
-							Ginger, Cinnamon, Damiana</p>
-							<p class="descricao">“Light my fire” says the song. Well, that’s what this infusion is all about: spicy plants that awaken our senses and ignite every inch of us. A tea for two, for sure.</p>
+							Lavender, Lemongrass, Peppermint, Mallow, Valerian</p>
+							<p class="descricao">Refreshing, it has all the virtues of mint and lavender ... with a lemongrass zest… or be enjoyed as a delicious summer drink.</p>
 						</div>
 						<div class="buy">
 							<p class="price">40g&nbsp;&nbsp;6,50€</p>
 							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
 								<input name="userid" type="hidden" value="B7179736">
-								<input name="product" type="hidden" value="Le Feu">
+								<input name="product" type="hidden" value="Full Moon">
+								<input name="price" type="hidden" value="6.50">
+								<input name="return" type="hidden" value="www.mycha.org/buy.html">
+								<input class="add-to-cart" type="submit" value="add to cart">
+							</form>
+						</div>
+					</div>
+					<div class="D" id="circulez">
+						<div class="tea_details">
+							<img class="photo1" src="./images/circulez_L.jpg" />
+							<h4 class="cha_detail">Circulez!</h4>
+							<h5>Protects circulation, with taste</h5>
+							<p class="composicao">
+							Red vine, Herb-Robert Geranium, Blueberry, Hibiscus, Rose </p>
+							<p class="descricao">A herbal mix of protective plants with a floral and tangy taste to aid circulation.</p>
+						</div>
+						<div class="buy">
+							<p class="price">40g&nbsp;&nbsp;6,50€</p>
+							<form action="http://ww9.aitsafe.com/cf/add.cfm" method="post">
+								<input name="userid" type="hidden" value="B7179736">
+								<input name="product" type="hidden" value="Circulez">
 								<input name="price" type="hidden" value="6.50">
 								<input name="return" type="hidden" value="www.mycha.org/buy.html">
 								<input class="add-to-cart" type="submit" value="add to cart">
@@ -146,12 +104,13 @@
 						</div>
 					</div>
 			</section>
-					<nav id="family_links">
+			<nav id="family_links">
+						<a href="./tonic.html">tonic</a>
 						<a href="./calming.html">calming</a>
 						<a href="./detox.html">little extras</a>
-						<a href="./iced_tea.html">iced tea</a>
 						<a href="./beauty.html">beauty</a>
-						<a href="#">tailor-made</a>
+						<!-- <a href="#">iced tea</a> -->
+						<a href="./tailor-made.html">tailor-made</a>
 						<a href="./buy.html">see all</a>
 					</nav>
 		</main>
