background improvements, order-complete pag

--- a/mycha_mob/tonic.html
+++ b/mycha_mob/tonic.html
@@ -41,7 +41,7 @@
 			</section>  
 		</header>
 		<main>
-			<h2>shop my cha!</h2>
+			<h2>tonic</h2>
 			
 			<section class="tea_listings">
 					<!-- Tonic -->
