edited link color, tailor made text edits

--- a/mycha_mob/tailor-made.html
+++ b/mycha_mob/tailor-made.html
@@ -46,7 +46,7 @@
 				<div id="hands_book" class="photo">
 				</div>
 				<div class="body-copy">
-					<p class="descricao">In order to meet your specific needs, a special date, event or a corporate gift, <span class="myCha"> My Cha</span> will create an entirely personalized tailor made infusion, right down to the design details.<br />
+					<p class="descricao">In order to meet your specific needs, a special date, event or a corporate gift, <span class="myCha"> My Cha</span> will create an entirely personalized tailor made infusion, pot-pourri or herbal mix, right down to the design details.<br />
 					We create a mixture of plants, flavors, and graphic design to define for this particular infusion, your very own herbal mix. 
 					</p>
 					<br />
