--- a/Unit9_project/index.html
+++ b/Unit9_project/index.html
@@ -68,11 +68,15 @@
     		<p>2018&copy;Monk's Cafe</p>
     		
     	</footer>
-    	<script src="js/jquery-3.0.0.js"></script>
-		<script src="js/main.js"></script>
-    	<script async defer
+
+	<script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+	<script src="js/handlebars-v4.0.5.js"></script>
+
+	<script src="js/jquery-3.0.0.js"></script>
+	<script src="js/main.js"></script>
+	<script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXZtvZPcvZw6PImOKA1iWYItI36Jgz6C4&callback=initMap">
-	    </script>
+    </script>
     	
     </body>
 </html>
